[tool.poetry]
name = "aoc2021"
version = "0.0.1"
description = ""
authors = ["tailaiw <29800495+tailaiw@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.18"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^5.9.3"
flake8 = "^3.9.2"
mypy = "^0.910"

ipykernel = "^6.2.0"
jupyter = "^1.0.0"
ipython = "^7.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
